Right bar visibility should be fixed

--- a/public/jsdaw/css/app.css
+++ b/public/jsdaw/css/app.css
@@ -48,7 +48,8 @@ body {
 }
 
 #right-bar {
-  float:right;
+  position:absolute;
+  right:0;
   width:300px;
   height:100%;
   background-color:#222;
